Maximum Frequency Stack updated